[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fishkeeper-ai-mcp"
version = "1.0.0"
description = "MCP server for aquarium management - water analysis, fish ID, compatibility, disease diagnosis, stocking"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "MEOK AI Labs", email = "hello@meok.ai" },
]
keywords = ["mcp", "aquarium", "fishkeeping", "aquaculture", "water-quality", "fishkeeper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://fishkeeper.ai"
Repository = "https://github.com/meok-ai/fishkeeper-ai-mcp"
Documentation = "https://fishkeeper.ai/docs"
Issues = "https://github.com/meok-ai/fishkeeper-ai-mcp/issues"

[project.scripts]
fishkeeper-ai-mcp = "server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["."]
